--- a/travel.css
+++ b/travel.css
@@ -3,13 +3,120 @@
     padding: 0;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap');
+
+
+html {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+li {
+    list-style: none;
+}
 
 .beach {
-    background-image: url('/imgs/SyA058.jpg');
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('/imgs/SyA058.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     height: 670px;
+}
 
+header {
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 6.7% 0px 6.7%;
+    align-items: center;
+    padding-top: 1.6%;
+
+}
+
+header p {
+    color: rgb(248, 248, 248);
+    font-size: 24px;
+}
+
+.fas {
+    padding-right: 10px;
+}
+
+header ul li {
+    display: inline-block;
+    font-size: 20px;
+    padding-left: 20px;
+
+}
+
+header ul li a {
+    color: rgb(248, 241, 241);
+}
+
+header ul li a:hover {
+    transition: all 0.33s ease 0.0s;
+    color: rgb(109, 109, 109);
+}
+
+a {
+    text-decoration: none;
+}
+
+.entry {
+    display: flex;
+    margin: 10% 0 0 6.7%;
+    justify-content: space-between;
+
+}
+
+.text {
+    width: 35%;
+}
+
+.entry h2 {
+    font-size: 70px;
+    font-weight: 566;
+    color: rgb(248, 241, 241);
+}
+
+.rotated {
+    display: inline-block;
+    margin-top: 4%;
+}
+
+.rotated ul {
+
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 80%;
+    transform: rotate(90deg);
+}
+
+.rotated li {
+    font-size: 14.5px;
+    padding-right: 20px;
+    color: rgb(248, 241, 241);
+}
+
+.rotated i {
+    font-size: 14.5px;
+    color: rgb(248, 241, 241);
+}
+
+.text button {
+
+    background: none;
+    border-style: ridge;
+    border-width: 0.8px;
+    padding: 6px;
+    border-color: rgb(153, 153, 153);
+    color: rgb(250, 242, 242);
+    font-size: 18px;
+    box-shadow: none;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.text i {
+    font-size: 23px;
 }
