--- a/travel.css
+++ b/travel.css
@@ -20,16 +20,15 @@ li {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 670px;
+    height: 711px;
 }
 
 header {
     display: flex;
     justify-content: space-between;
-    margin: 0px 6.7% 0px 6.7%;
+    margin: 0px 10% 0px 10%;
     align-items: center;
     padding-top: 1.6%;
-
 }
 
 header p {
@@ -45,7 +44,6 @@ header ul li {
     display: inline-block;
     font-size: 20px;
     padding-left: 20px;
-
 }
 
 header ul li a {
@@ -63,9 +61,8 @@ a {
 
 .entry {
     display: flex;
-    margin: 10% 0 0 6.7%;
+    margin: 10% 0 0 10%;
     justify-content: space-between;
-
 }
 
 .text {
@@ -84,7 +81,6 @@ a {
 }
 
 .rotated ul {
-
     display: flex;
     flex-direction: row;
     padding-bottom: 80%;
@@ -105,15 +101,15 @@ a {
 .text button {
 
     background: none;
-    border-style: ridge;
-    border-width: 0.8px;
+    border-width: 1px;
     padding: 6px;
-    border-color: rgb(153, 153, 153);
+    border-color: rgba(112, 112, 112, 0.568);
     color: rgb(250, 242, 242);
     font-size: 18px;
-    box-shadow: none;
     margin-top: 10px;
     cursor: pointer;
+    border-style: solid;
+    border-radius: 1.8%;
 }
 
 .text i {
@@ -124,59 +120,54 @@ a {
     height: 500px;
     display: grid;
     grid-template-columns: 3fr 2fr 2fr 2fr;
-    margin: 0 6.7% -100px 6.7%;
-    grid-template-rows: 350px;
+    margin: 0 10% -100px 10%;
+    grid-template-rows: 320px;
     column-gap: 20px;
     margin-top: -3%;
 }
 
-
-
-.box1 {
+[class*="box"] {
     display: grid;
     align-content: flex-end;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url('/imgs/featured-surfing-lessons.jpg') center center no-repeat;
     border-radius: 1.5%;
+}
+
+.box1 {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url('/imgs/featured-surfing-lessons.jpg') center center no-repeat;
 }
 
 .box2 {
-    display: grid;
-    align-content: flex-end;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url('/imgs/summer-drinks-800x500.jpg') center center;
-    border-radius: 1.5%;
-
-
-
 }
 
 .box3 {
-    display: grid;
-    align-content: flex-end;
     background: url('/imgs/1.jpg') center center;
-    border-radius: 1.5%;
 }
 
-.box1 a,
-.box2 a,
-.box3 a {
+[class*="box"] a {
     padding-left: 5%;
     padding-top: 2%;
     padding-bottom: 3%;
     color: rgb(235, 235, 235);
+    transition: all 0.3s ease 0.0s;
 
 }
 
-.box1 h3,
-.box2 h3,
-.box3 h3 {
+[class*="box"] h3 {
     padding-left: 5%;
     padding-bottom: 3%;
     color: rgb(235, 235, 235);
 
 }
 
+[class*="box"] a:hover {
+    color: rgb(129, 129, 129);
+    transform: scale(1.03);
+}
+
 .exhava {
-    margin: auto;
+    display: grid;
+    align-content: center;
     text-align: left;
 }
 
@@ -201,4 +192,282 @@ a {
 .exhava i {
     font-size: 30px;
     color: rgb(83, 83, 83);
+}
+
+.youradv {
+    margin-top: 7%;
+    display: grid;
+    text-align: center;
+    margin-bottom: 3%;
+}
+
+.youradv h4 {
+    margin-bottom: 0.7%;
+    color: rgb(53, 107, 255)
+}
+
+.youradv h2 {
+    margin-bottom: 1%;
+    color: rgb(20, 20, 20);
+}
+
+.youradv p {
+    color: rgb(95, 95, 95);
+    line-height: 1.1em;
+    width: 50%;
+    font-size: 19px;
+    margin: auto;
+}
+
+.adventures {
+    margin-left: 10%;
+    margin-right: 10%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 20px;
+    column-gap: 20px;
+}
+
+[class*="foto"] {
+    display: grid;
+    align-content: flex-end;
+    height: 350px;
+    border-radius: 1.5%;
+
+}
+
+.foto1 {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url('/imgs/featured-surfing-lessons.jpg') center center;
+
+}
+
+.foto2 {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url('/imgs/Beach-vacation.jpg') center center;
+}
+
+.foto3 {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url('/imgs/featured-kayaking.jpg') center center;
+}
+
+.foto4 {
+    background: url('/imgs/Aurora-borealis-peninsula-Snaefellsnes-Iceland-March-2013.jpg') center center;
+}
+
+.foto5 {
+    background: url('/imgs/p-6158581567-f6885d5f00-o_54_990x660.jpg') center center;
+}
+
+.foto6 {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)), url('/imgs/6814402196_5cccf439a3_b.jpg') center center;
+}
+
+.foto7 {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url('/imgs/View-from-suite-3-over-the-lower-deck-and-pool.jpg') center center;
+}
+
+.foto8 {
+    background: url('/imgs/gangehi-island-resort.jpg') center center;
+}
+
+.box3 {
+    display: grid;
+    align-content: flex-end;
+    background: url('/imgs/1.jpg') center center;
+    border-radius: 1.5%;
+}
+
+[class*="foto"] a {
+    padding-left: 5%;
+    padding-top: 2%;
+    padding-bottom: 3%;
+    color: rgb(235, 235, 235);
+    transition: all 0.3s ease 0.0s;
+
+}
+
+[class*="foto"] h3 {
+    padding-left: 5%;
+    padding-bottom: 3%;
+    color: rgb(235, 235, 235);
+
+}
+
+[class*="foto"] a:hover {
+    color: rgb(129, 129, 129);
+    transform: scale(1.03);
+    font-weight: 600;
+}
+
+[class*="foto"] a i {
+    font-size: 15px;
+}
+
+[class*="details"] p {
+    color: rgb(129, 129, 129);
+    margin-top: 3.4%;
+    font-weight: 660;
+    font-size: 15px;
+}
+
+.hr {
+    margin: 10% 10% 10% 10%;
+    border: 0;
+    height: 0.05em;
+    background-color: rgba(129, 129, 129, 0.3);
+
+}
+
+.hr1 {
+    margin: 10% 10% 2.5% 10%;
+    border: 0;
+    height: 0.05em;
+    background-color: rgba(129, 129, 129, 0.3);
+}
+
+.yourflight {
+    text-align: center;
+    margin-bottom: 3%;
+}
+
+.yourflight h4 {
+    margin-bottom: 0.7%;
+    color: rgb(53, 107, 255)
+}
+
+.yourflight h2 {
+    margin-bottom: 4%;
+    color: rgb(20, 20, 20);
+}
+
+.flights {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0% 10% 10% 10%;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 40px;
+    row-gap: 40px;
+}
+
+[class*="hongkong"] {
+    border-radius: 1.5%;
+    padding: 20px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(145, 145,
+            145, 0.38)
+}
+
+[class*="hongkong"] p {
+    color: rgb(129, 129, 129);
+    font-size: 15px;
+    font-weight: 610;
+    margin-bottom: 2%;
+}
+
+[class*="hongkong"] :nth-child(3) {
+    margin-bottom: 3%
+}
+
+[class*="hongkong"] h2 {
+    margin-bottom: 2%;
+    color: rgb(20, 20, 20);
+}
+
+[class*="hongkong"] hr {
+    border-width: 0.01em;
+    border-style: dashed;
+    border-color: rgba(145, 145,
+            145, 1);
+    margin-bottom: 3%;
+}
+
+[class*="hongkong"] p span {
+    padding-left: 3px;
+    font-size: 18px;
+    color: black;
+}
+
+[class*="hongkong"] i {
+    color: rgb(59, 139, 231);
+    padding-left: 11px;
+}
+
+
+.email {
+    text-align: center;
+    margin-bottom: 10%;
+}
+
+.email h4 {
+    margin-bottom: 0.7%;
+    color: rgb(53, 107, 255)
+}
+
+.email h2 {
+    margin-bottom: 4%;
+    color: rgb(20, 20, 20);
+}
+
+.empty {
+    border-width: 1.2px;
+    border-style: solid;
+    border-color: rgba(145, 145,
+            145, 0.52);
+    padding: 13px;
+    font-size: 14px;
+    border-right: none;
+    width: 20%;
+    border-radius: 3%;
+}
+
+.btn {
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(145, 145,
+            145, 0.60);
+    padding: 13px 27px 13px 27px;
+    font-size: 14px;
+    border-left: none;
+    background-color: rgb(19, 114, 223);
+    color: white;
+    background: linear-gradient(to left, rgb(19, 114, 223), rgb(75, 189, 255));
+    font-weight: 555;
+    border-radius: 3%;
+    cursor: pointer;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-color: rgba(19, 114, 223, 0.1);
+
+}
+
+::placeholder {
+    color: rgba(88, 88, 88, 0.8)
+}
+
+footer {
+    margin: 0% 10% 10% 10%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+footer p {
+    color: rgba(129, 129, 129, 0.7);
+    margin-bottom: 9.6%;
+    font-size: 14px;
+    font-weight: 550;
+}
+
+footer div :nth-child(1) {
+    font-weight: 600;
+    color: rgba(46, 46, 46, 0.712);
+    margin-bottom: 13%;
+}
+
+.rights {
+    text-align: center;
+    font-size: 12.7px;
+    color: rgba(129, 129, 129, 0.7);
+    margin-bottom: 3%;
+
 }
