--- a/travel.css
+++ b/travel.css
@@ -29,6 +29,22 @@ header {
     margin: 0px 10% 0px 10%;
     align-items: center;
     padding-top: 1.6%;
+    transition: all 0.4s ease-in 0.0s;
+    height: 4%;
+}
+
+header #bars {
+    display: none;
+
+}
+
+.ul-for-mobile {
+    display: grid;
+    transition: all 1s ease 0.0s;
+}
+
+.header-height-res {
+    height: 25%;
 }
 
 header p {
@@ -117,11 +133,11 @@ a {
 }
 
 .sec2 {
-    height: 500px;
+
     display: grid;
     grid-template-columns: 3fr 2fr 2fr 2fr;
-    margin: 0 10% -100px 10%;
-    grid-template-rows: 320px;
+    margin: 0 10% 0px 10%;
+    grid-template-rows: 300px;
     column-gap: 20px;
     margin-top: -3%;
 }
@@ -223,8 +239,8 @@ a {
     margin-left: 10%;
     margin-right: 10%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
     row-gap: 20px;
     column-gap: 20px;
 }
@@ -342,7 +358,7 @@ a {
 
 .flights {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     margin: 0% 10% 10% 10%;
     grid-template-rows: 1fr 1fr;
     column-gap: 40px;
@@ -448,7 +464,7 @@ a {
 footer {
     margin: 0% 10% 10% 10%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
 }
 
 footer p {
@@ -469,5 +485,74 @@ footer div :nth-child(1) {
     font-size: 12.7px;
     color: rgba(129, 129, 129, 0.7);
     margin-bottom: 3%;
+
+}
+
+@media screen and (max-width:1024px) {
+    .sec2 {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) !important;
+        margin: 5% 10% 0px 10% !important;
+        grid-template-rows: 270px 270px !important;
+        row-gap: 20px;
+
+    }
+
+    [class*="hongkong"] hr {
+        border-width: 0.03em;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        background-color: rgb(24, 24, 24);
+        padding: 6px 1% 6px 1%;
+        margin: 0;
+        display: block;
+    }
+
+    header ul {
+        display: none;
+        margin: 0;
+    }
+
+    header li {
+        display: block;
+        margin-bottom: 14px;
+        text-align: center;
+    }
+
+    header #bars {
+        display: inline-block;
+        float: right;
+    }
+
+    header p {
+        width: 100%;
+    }
+
+    .entry {
+        margin: 0 0% 0% 1.5% !important;
+    }
+
+    .rotated {
+        margin-top: 20% !important;
+    }
+
+    .sec2 {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)) !important;
+        margin: 5% 10% 0px 10% !important;
+        grid-template-rows: 200px 270px 270px 270px !important;
+        row-gap: 20px;
+
+    }
+
+    .beach {
+        height: 500px;
+    }
+
+    [class*="hongkong"] hr {
+        border-width: 0.05em;
+    }
+
 
 }
